kubernetes/apps/default/transmission-vpn/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-vpn
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: transmission-vpn.torquasmvo.internal
spec:
  selector:
    app: transmission-vpn
  ports:
    - name: web
      protocol: TCP
      port: 9091
      targetPort: 9091
  type: LoadBalancer
  loadBalancerIP: 10.0.0.224
